Fixed font consistency across all devices, especially iOS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Be My Valentine? 💝</title>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        * {
+            font-family: 'Comic Sans MS', 'Comic Neue', 'Chalkboard SE', 'Marker Felt', sans-serif;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+
         body {
             margin: 0;
             min-height: 100vh;
@@ -12,7 +19,6 @@
             justify-content: center;
             align-items: center;
             background-color: #ffe6e6;
-            font-family: 'Comic Sans MS', cursive;
             overflow: hidden;
             padding: 1rem;
             box-sizing: border-box;
@@ -56,7 +62,6 @@
             border-radius: 50px;
             cursor: pointer;
             transition: all 0.3s ease;
-            font-family: 'Comic Sans MS', cursive;
             position: relative;
             white-space: nowrap;
             margin: 0.5rem;
